openshift/test/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: f343b4-test
    name: name-selector-tool
    annotations:
        image.openshift.io/triggers: >-
            [{"from":{"kind":"ImageStreamTag","name":"name-selector-tool:test","namespace":"f343b4-tools"},"fieldPath":"spec.template.spec.containers[?(@.name==\"container\")].image","paused":false}]
spec:
    selector:
        matchLabels:
            app: name-selector-tool
    replicas: 2
    template:
        metadata:
            labels:
                app: name-selector-tool
        spec:
            containers:
                - name: container
                  image: >-
                      image-registry.openshift-image-registry.svc:5000/f343b4-tools/name-selector-tool@sha256:cc4a009fc00a83a690335ea870a5a90f7d3f56c7b4900ca9a3cd83bb1f935021
                  ports:
                      - containerPort: 8080
                        protocol: TCP
                  env: []
            imagePullSecrets: []
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 50%
    paused: false
