openshift/test/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: name-selector-tool
  namespace: f343b4-test
spec:
  selector:
    app: name-selector-tool
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
